[gd_scene load_steps=4 format=3 uid="uid://bpabwbo2u6s1y"]

[ext_resource type="Texture2D" uid="uid://bx7wy8fuabsti" path="res://icon.svg" id="1_0gq20"]
[ext_resource type="Script" path="res://Scripts/Environment/WaterBody.gd" id="1_ot2dl"]
[ext_resource type="PackedScene" uid="uid://f6ufnehndica" path="res://Scenes/Environment/ActivityArea.tscn" id="2_77m8w"]

[node name="WaterBody" type="Node2D"]
position = Vector2(600, 319)
script = ExtResource("1_ot2dl")
ActivityAreaScene = ExtResource("2_77m8w")
WaterSensorPixelSize = 15

[node name="WaterBodySprite" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(6.35097, -2.82439)
texture = ExtResource("1_0gq20")

[node name="WaterBodyArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WaterBodyArea"]
polygon = PackedVector2Array(1, -67, 37, -59, 86, -53, 136, -68, 164, -105, 179, -149, 185, -182, 224, -195, 281, -183, 326, -123, 353, -43, 352, 44, 335, 103, 283, 148, 152, 160, 82, 169, -29, 163, -174, 127, -296, 86, -336, 8, -317, -96, -243, -135, -149, -138, -55, -108)

[node name="TopLeftLimit" type="Node2D" parent="."]
position = Vector2(-420, -200)

[node name="BottomRightLimit" type="Node2D" parent="."]
position = Vector2(414, 190)

[node name="NodesPool" type="Node2D" parent="."]
